add stocknews, earning_call_transcript, etc
